--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns:color="http://www.w3.org/1999/xhtml" xmlns:http="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="UTF-8">
-    <title>particles.js demo</title>
+    <title>EULER LABS</title>
         <link rel="stylesheet" href="css/style.css">
   </head>
 
