Domain mail verification

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <div id="particles-js" align="center">
         <h1 id="main-header"> Euler Labs </h1>
-        <h2 style="display: flex; align-items: center; font-family: Mohave; font-size: 40px; position: absolute; color: white; justify-content: center; height: 90%; width: 100%;" > Saint Petersburg</h2>
+        <h2 style="display: flex; align-items: center; font-family: Mohave; font-size: 40px; position: relative; color: white; justify-content: center; height: 90%; width: 100%;" > Saint Petersburg</h2>
 
 
 
