--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html xmlns:color="http://www.w3.org/1999/xhtml" xmlns:http="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="UTF-8">
-    <title>EULER LABS</title>
+    <title>particles.js demo</title>
         <link rel="stylesheet" href="css/style.css">
+      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
   </head>
 
   <body>
@@ -11,18 +13,9 @@
 
     <div id="particles-js" align="center">
         <h1 id="main-header"> Euler Labs </h1>
-<<<<<<< HEAD
-        <h2 style="display: flex; align-items: center; font-family: Mohave; font-size: 40px; position: relative; color: white; justify-content: center; height: 90%; width: 100%;" > Saint Petersburg</h2>
-
-
-
-
-
-    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-=======
         <h2 style="display: flex; align-items: center; font-family: Mohave; font-size: 40px; position: absolute; color: white; justify-content: center; height: 90%; width: 100%;" > Saint Petersburg</h2>
+
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
->>>>>>> 74ba9d569696d6ebac51bd78c5449a0db9f829d9
     <script src="js/index.js"></script>
 
     </div>
