--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns:color="http://www.w3.org/1999/xhtml" xmlns:http="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="UTF-8">
-    <title>EulerLabs</title>
+    <title>particles.js demo</title>
         <link rel="stylesheet" href="css/style.css">
       <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
@@ -13,19 +13,7 @@
 
     <div id="particles-js" align="center">
         <h1 id="main-header"> Euler Labs </h1>
-<<<<<<< HEAD
-<<<<<<< HEAD
-        <h2 style="display: flex; align-items: center; font-family: Mohave; margin-top: 50px; font-size: 40px; position: relative; color: white; justify-content: center; height: 90%; width: 100%;" > Saint Petersburg</h2>
-
-
-
-
-
-    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-=======
-=======
->>>>>>> origin/master
-        <h2 style="display: flex; align-items: center; font-family: Mohave; font-size: 40px; position: absolute; color: white; justify-content: center; height: 90%; width: 100%;" > Saint Petersburg</h2>
+        <h2 style="display: flex; align-items: center; margin-top: 50px; font-family: Mohave; font-size: 40px; position: absolute; color: white; justify-content: center; height: 90%; width: 100%;" > Saint Petersburg</h2>
 
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="js/index.js"></script>
