--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
   <body>
    <!-- particles.js container -->
-
+   
+    
+    <!-- Ты успешно справился с первым заданием! Дальнейшие инструкции ты можешь получить в комнате ХХХ. Кодовое слово:  -->
+    
     <div id="particles-js" align="center">
         <h1 id="main-header"> Euler Labs </h1>
         <h2 style="display: flex; align-items: center; margin-top: 50px; font-family: Mohave; font-size: 40px; position: absolute; color: white; justify-content: center; height: 90%; width: 100%;" > DOLGOPRUDNIY</h2>
