--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <!-- particles.js container -->
    
     
-    <!-- Ты успешно справился с первым заданием! Дальнейшие инструкции ты можешь получить в комнате ХХХ. Кодовое слово:  -->
+    <!-- Ты успешно справился с первым заданием! Дальнейшие инструкции ты можешь получить в комнате ХХХ (я еще не договорился с посредником о следующем этапе, но скоро здесь появится номер комнаты). Кодовое слово: ????  -->
     
     <div id="particles-js" align="center">
         <h1 id="main-header"> Euler Labs </h1>
