--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <!-- particles.js container -->
    
     
-    <!-- Ты успешно справился с первым заданием! Дальнейшие инструкции ты можешь получить у моего связного, который проживает в комнате №327. Кодовое слово: Навуходоносор. Удачи! -->
+    <!-- Ты успешно справился с первым заданием! Дальнейшие инструкции ты можешь получить у моего связного, который проживает в комнате №327. Кодовое слово: панлогизм. Удачи! -->
     
     <div id="particles-js" align="center">
         <h1 id="main-header"> Euler Labs </h1>
